@@ -6,10 +6,12 @@ jEdit 5.0 version history
 
 Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
 Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
-Martin Raspe, Michael Pradel and Jarek Czekalski for contributing to this
-release. 
+Martin Raspe, Michael Pradel, Max Funk and Jarek Czekalski for contributing to
+this release.
 
 {{{ Bug fixes
+
+- Wrong chars in auxiliary fonts (Max Funk - #3474765, 3474534)
 
 - Inner class of FilteredListModel passes wrong "this" (patch# 3477759 - 
   Michael Pradel
